<resources>
    <string name="app_name">Movies App</string>
 <string name="home_text">The Best Trending Movies are Here!</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="made_in">Made In</string>
    <string name="production_companies">Production Companies:</string>
    <string name="genres">Genres:</string>
    <string name="overview">Overview:</string>
    <string name="dollar_logo">Dollar Logo</string>
    <string name="budget">Budget:</string>
    <string name="arrow_stats_up">Arrow Stats Up</string>
    <string name="revenue">Revenue:</string>
</resources>